-[FRONTEND] Create a new tab component. Will have a set of boxes and each box will move to a different page. No box selected will also move to the Dashboard page. -[FRONTEND] Add a new domain class to manage the Tab information. -[FRONTEND] Updated the Bootstrap styles and the Open Sans font.
Former-commit-id: 912618a6405e8b55dd39d2c3819ef4cae611e57d

--- a/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
@@ -8,3 +8,6 @@
 <div>
     <pilot-public-data-panel id="pilot-public-data-panel"></pilot-public-data-panel>
 </div>
+<div>
+    <tab-container-panel id="tab-container-panel" [tabName]="-NONE-"></tab-container-panel>
+</div>
