--- a/NeoCom.Infinity.Frontend/src/styles.scss
+++ b/NeoCom.Infinity.Frontend/src/styles.scss
@@ -1,5 +1,6 @@
 // - ADDITIONAL MODULES STYLES
-@import "~bootstrap/dist/css/bootstrap.css"; // bootstrap styles
+// @import "~bootstrap/dist/css/bootstrap.css"; // bootstrap styles
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 @import './styles/toaster.css'; // angular5-toaster module additional styles
 // - APPLICATION STYLES VARIABLES
 @import "./styles/_scss_variables.scss";
