-[NIF02.01]-Check that the Dashboard Home Page has the correct header panels. -[FRONTEND] Add active tab to the tab definition.
Former-commit-id: c64d211a8026dd9b37cd17428012a30d75ecdb42

--- a/NeoCom.Infinity.Frontend/src/app/modules/header/tab-container-panel/tab-container-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/header/tab-container-panel/tab-container-panel.component.html
@@ -1,5 +1,5 @@
 <ul class="nav nav-tabs">
-    <li *ngFor="let tab of tabs" class="tab-selector">
-        <a href="#"><span class="tab-name"><img class="tab-icon" src="{{tab.icon}}">{{tab.name}}</span></a>
+    <li *ngFor="let tab of tabs" class="tab-selector" [ngClass]="{'active' : tab.isActive()}">
+        <a href="{{tab.pageLink}}"><span class="tab-name"><img class="tab-icon" src="{{tab.icon}}">{{tab.name}}</span></a>
     </li>
 </ul>
