--- a/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
@@ -9,5 +9,5 @@
     <pilot-public-data-panel id="pilot-public-data-panel"></pilot-public-data-panel>
 </div>
 <div>
-    <tab-container-panel id="tab-container-panel" [tabName]="-NONE-"></tab-container-panel>
+    <tab-container-panel id="tab-container-panel" [tabName]="'-NONE-'"></tab-container-panel>
 </div>
